did changes for the fonts and also created a json list for the products and trending items instead of hardcoding them

--- a/loveiswar/src/styles/store.css
+++ b/loveiswar/src/styles/store.css
@@ -99,13 +99,13 @@
 .caption h4 {
   margin: 0;
   font-size: 1rem;
-  font-weight: bold;
+  font-weight: normal;
 }
 
 .caption p {
   margin: 0;
   color: #e60000;
-  font-weight: bold;
+  font-weight: normal;
   font-size: 0.95rem;
 }
 
