--- a/loveiswar/src/about.css
+++ b/loveiswar/src/about.css
@@ -10,6 +10,7 @@
   font-size: 2.5rem;
   margin-bottom: 2rem;
   letter-spacing: 2px;
+  font-family: 'Dm Serif Text', serif;
 }
 
 .our-code-grid {
