--- a/loveiswar/src/styles/store.css
+++ b/loveiswar/src/styles/store.css
@@ -3,19 +3,28 @@
 .store-container {
   background-color: #000;
   color: #fff;
-  padding: 4rem 1rem;
-  min-height: 100vh;
+  padding: 5rem 1rem;
+  min-height: 1vh;
+  max-width: 100vw;
   width: 100%;
   text-align: center;
 }
 
 /* Store Title */
 .store-title {
-  font-size: 2.8rem;
+  font-size: 2rem;
   margin-bottom: 2rem;
-  text-transform: uppercase;
+  font-family: 'DM Serif Text', serif;
   font-weight: normal;
   display: inline-block;
+}
+
+.note{
+  font-size: 0.9rem;
+  margin-bottom: 2rem;
+  font-family: 'Noto Sans Display', sans-serif;
+  color: #b7fffb;
+   font-weight: 400;
 }
 
 /* Sorting section */
@@ -98,12 +107,14 @@
 
 .caption h4 {
   margin: 0;
+  font-family: 'Noto Sans Display', sans-serif;
   font-size: 1rem;
   font-weight: normal;
 }
 
 .caption p {
   margin: 0;
+  font-family: 'Noto Sans Display', sans-serif;
   color: #e60000;
   font-weight: normal;
   font-size: 0.95rem;
