commit with issue

--- a/loveiswar/src/styles/store.css
+++ b/loveiswar/src/styles/store.css
@@ -23,7 +23,7 @@
   font-size: 0.9rem;
   margin-bottom: 2rem;
   font-family: 'Noto Sans Display', sans-serif;
-  color: #b7fffb;
+  color: #ffffff;
    font-weight: 400;
 }
 
