--- a/loveiswar/src/popular.css
+++ b/loveiswar/src/popular.css
@@ -10,6 +10,7 @@
   font-size: 2.5rem;
   margin-bottom: 2rem;
   letter-spacing: 1px;
+  font-family: 'DM Serif Text', serif ;
 }
 
 .products-grid {
