added some css to prevent horizontal scroll , changed images to avif format for better compression and quality. and added python script to convert images to avif format. added new products to trending.json and removed old ones.

--- a/loveiswar/src/navbar.css
+++ b/loveiswar/src/navbar.css
@@ -6,10 +6,11 @@
 
 body {
   background: #121212;
+  overflow-x: hidden;
 }
 
 .navbar {
-  width: 100%;
+  width: 100vw;
   height:60px;
   background-color: black;
   padding: 1rem 0;
