--- a/loveiswar/src/carousel.css
+++ b/loveiswar/src/carousel.css
@@ -1,17 +1,17 @@
 .carousel {
   width: 100%;
   max-width: 1800px;
-  height: 600px;
-  overflow: hidden;
+  height: 90vh;
   position: relative;
-  margin: 5% auto;
   border-radius: 0px;
+  overflow: hidden;
 }
 
 .carousel-image {
-  width: 100vw;
+  width: 100%;
   height: 100%;
   object-fit: cover;
+  overflow: hidden;
   animation: fade 5s ease-out;
 }
 
