--- a/loveiswar/src/styles/reviewpage.css
+++ b/loveiswar/src/styles/reviewpage.css
@@ -145,3 +145,28 @@
 .see-more-btn:hover {
   background: #ddd;
 }
+
+
+.login-prompt {
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 40px;
+}
+
+.login-prompt button {
+  padding: 0.75rem 1.5rem;
+  margin-top: 20px;
+  background: #6c6c6c;
+  color: #ffffff;
+  border-radius: 20px;
+  border: none;
+  cursor: pointer;
+  font-family: 'Noto Sans Display', sans-serif;
+  font-weight: normal;
+  transition: background 0.3s;
+}
+
+.login-prompt button:hover {
+  background: #ffffff;
+  color: #000000;
+}
